Fix app features visibility pre desktop

--- a/css/style.css
+++ b/css/style.css
@@ -810,141 +810,145 @@ main {
 /* MARK: Features 2 */
 
 .app-features {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  .upper-container {
-    width: min(100%, 1320px);
+  display: none;
+
+  @media (min-width: 1024px) {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    padding: 5rem 0;
-
-    .description-container {
+    justify-content: center;
+    .upper-container {
+      width: min(100%, 1320px);
       display: flex;
-      flex-direction: column;
-      gap: 3rem;
-      width: 60%;
+      align-items: center;
+      padding: 5rem 0;
 
-      .title {
-        width: 60%;
-
-        h2 {
-          font-size: 2rem;
-          font-weight: 800;
-          line-height: 1.3;
-        }
-      }
-
-      .checks-container {
+      .description-container {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 3rem;
+        width: 60%;
 
-        .check {
+        .title {
+          width: 60%;
+
+          h2 {
+            font-size: 2rem;
+            font-weight: 800;
+            line-height: 1.3;
+          }
+        }
+
+        .checks-container {
           display: flex;
+          flex-direction: column;
           gap: 1rem;
 
-          p {
-            color: var(--clr-font);
+          .check {
+            display: flex;
+            gap: 1rem;
 
-            line-height: 1.6;
-          }
-        }
-      }
+            p {
+              color: var(--clr-font);
 
-      .learn-more-btn {
-        a {
-          background: var(--brand-primary);
-          padding: 0.75rem 1.75rem;
-          color: white;
-          text-decoration: none;
-          border-radius: 0.5rem;
-        }
-      }
-    }
-
-    .img-container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-
-      .sm-img {
-        position: absolute;
-        bottom: -55px;
-        right: -65px;
-        z-index: 1;
-      }
-    }
-  }
-
-  .lower-container {
-    width: min(100%, 1320px);
-    display: flex;
-    align-items: center;
-    padding: 5rem 0;
-    gap: 8rem;
-
-    .img-container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-
-      .lower-sm-img {
-        position: absolute;
-        width: 21rem;
-        bottom: 55px;
-        right: -55px;
-        z-index: 1;
-      }
-    }
-
-    .description-container {
-      display: flex;
-      flex-direction: column;
-      gap: 5rem;
-
-      .title {
-        width: 60%;
-        h2 {
-          font-size: 2rem;
-          font-weight: 800;
-        }
-      }
-
-      .selections-container {
-        display: flex;
-        gap: 4rem;
-
-        .feature-description-card {
-          width: 35%;
-
-          p {
-            color: var(--clr-font);
-            line-height: 1.6;
-          }
-
-          .feature-icon {
-            margin-bottom: 1rem;
-
-            img {
-              padding: 0.8rem;
-              border-radius: 0.5rem;
-              background: var(--background-section);
+              line-height: 1.6;
             }
           }
         }
+
+        .learn-more-btn {
+          a {
+            background: var(--brand-primary);
+            padding: 0.75rem 1.75rem;
+            color: white;
+            text-decoration: none;
+            border-radius: 0.5rem;
+          }
+        }
       }
 
-      .learn-more-btn {
-        a {
-          background: var(--brand-primary);
-          padding: 0.75rem 1.75rem;
-          color: white;
-          text-decoration: none;
-          border-radius: 0.5rem;
+      .img-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+
+        .sm-img {
+          position: absolute;
+          bottom: -55px;
+          right: -65px;
+          z-index: 1;
+        }
+      }
+    }
+
+    .lower-container {
+      width: min(100%, 1320px);
+      display: flex;
+      align-items: center;
+      padding: 5rem 0;
+      gap: 8rem;
+
+      .img-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+
+        .lower-sm-img {
+          position: absolute;
+          width: 21rem;
+          bottom: 55px;
+          right: -55px;
+          z-index: 1;
+        }
+      }
+
+      .description-container {
+        display: flex;
+        flex-direction: column;
+        gap: 5rem;
+
+        .title {
+          width: 60%;
+          h2 {
+            font-size: 2rem;
+            font-weight: 800;
+          }
+        }
+
+        .selections-container {
+          display: flex;
+          gap: 4rem;
+
+          .feature-description-card {
+            width: 35%;
+
+            p {
+              color: var(--clr-font);
+              line-height: 1.6;
+            }
+
+            .feature-icon {
+              margin-bottom: 1rem;
+
+              img {
+                padding: 0.8rem;
+                border-radius: 0.5rem;
+                background: var(--background-section);
+              }
+            }
+          }
+        }
+
+        .learn-more-btn {
+          a {
+            background: var(--brand-primary);
+            padding: 0.75rem 1.75rem;
+            color: white;
+            text-decoration: none;
+            border-radius: 0.5rem;
+          }
         }
       }
     }
